grafana/grafana.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:11.2.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-volume
              mountPath: /var/lib/grafana
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-providers
              mountPath: /etc/grafana/provisioning/dashboards
            - name: grafana-kube-dashboard
              mountPath: /var/lib/grafana/dashboards
          resources:
            requests:
              memory: "300Mi"
              cpu: "10m"
            limits:
              memory: "400Mi"
              cpu: "10m"
      volumes:
        - name: grafana-volume
          persistentVolumeClaim:
            claimName: grafana-pvc

        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        
        - name: grafana-providers
          configMap:
            name: grafana-providers
        
        - name: grafana-kube-dashboard
          configMap:
            name: grafana-kube-dashboard

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: "grafana.olred.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
