grafana/grafana_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: "grafana.olred.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
